--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Augustin / Huacho",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.8.0",
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2"
   },
