--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Augustin / Huacho",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.8.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^14.3.2"
+    "dotenv": "^14.3.2",
+    "ffmpeg-static": "^4.4.1",
+    "opusscript": "^0.0.8",
+    "ytdl-core": "^4.10.0"
   },
   "engines": {
     "node": "16.13.x"
