--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^14.3.2",
     "ffmpeg-static": "^4.4.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "opusscript": "^0.0.8",
     "sequelize": "^6.16.1",
     "sqlite3": "^5.0.2",
