--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
     "ffmpeg-static": "^4.4.1",
+    "mariadb": "^2.5.5",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "opusscript": "^0.0.8",
